--- a/css/styles.css
+++ b/css/styles.css
@@ -18,3 +18,41 @@ h6,
 p {
   margin-bottom: 16px;
 }
+
+nav {
+  background-color: aquamarine;
+  margin: 20px auto;
+  height: 30px;
+  width: 800px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+nav a {
+  text-decoration: none;
+  color: cornflowerblue;
+}
+
+.home {
+  background-color: darksalmon;
+  max-width: 1000px;
+  margin: 0 auto;
+  text-align: center;
+}
+.home .hero {
+  height: 300px;
+  width: 100%;
+  background-image: url(../images/book-hero.jfif);
+  background-size: cover;
+  background-position: center;
+  margin: 20px 0;
+}
+.home .top-three {
+  display: flex;
+  justify-content: space-around;
+}
+.home .top-three .preview .book-container {
+  height: 400px;
+  width: 300px;
+  background-color: darkseagreen;
+}
