--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -1,14 +1,14 @@
 nav{
-    background-color: aquamarine;
-    margin: 20px auto;
-    height: 30px;
-    width: 800px;
+    background-color: darkseagreen;
+    margin: 0 auto 20px auto;
+    height: 60px;
+    max-width: 1200px;
     
     display: flex;
     justify-content: space-evenly;
     align-items: center;
      a{
          text-decoration: none;
-         color: cornflowerblue;
+         color: black;
      }
 }
